painful migration to latest version of java/spring/gradle
Signed-off-by: madtroll <madtroll@gmail.com>